Changes from RDO to Sunrise

--- a/langs/en.json
+++ b/langs/en.json
@@ -1977,7 +1977,7 @@
     "mp_animal_ram_legendary_03": "Ram #3 - Rutile Horn",
     "mp_animal_wolf_legendary_01": "Wolf #1 - Emerald",
     "mp_animal_wolf_legendary_02": "Wolf #2 - Onyx",
-    "mp_animal_wolf_legendary_03": "Wolf #3 - Moonstone",
+    "mp_animal_wolf_legendary_03": "Wolf - Moonstone",
     "mp_animal_alligator_legendary_01.desc": "This alligator is rumored to reside in the Lannahechee River, southwest of Saint Denis. It is famous for its slick black skin, a prized trophy for any poacher. If approaching, be wary of its powerful jaws which can deliver a deadly bite. This species is most active at night, when it is well camouflaged in the dark water. It can often be spotted during heavy storms.",
     "mp_animal_alligator_legendary_02.desc": "This alligator has been spotted by residents in Lakay. It has a distinctive orange coloring which can be easy to spot among the green and brown of the bayou. It is patient and cunning, biding its time before it takes down prey. It is rarely seen outside the early hours of the morning and favors heavy fog and mist.",
     "mp_animal_alligator_legendary_03.desc": "Word has spread about a strange alligator near Saint Denis. It is said to have white skin and a red striped back. With a nest so close to the city, the Legendary Banded Gator is likely to become defensive and territorial. Poachers have been spotted in the area, undeterred by warnings. Do not be fooled by its size. This gator can move with considerable speed.",
@@ -2019,7 +2019,7 @@
     "mp_animal_ram_legendary_03.desc": "This rare ram has been sighted in Rio Bravo and in Cholla Springs. Its wool is black and its horns dark red. It is known to charge at passersby and attack other animals in its territory. Word has spread fast, due to the aggressive nature of the ram. Those studying it should keep a safe distance to avoid being charged.",
     "mp_animal_wolf_legendary_01.desc": "This wolf is frequently sighted around O'Creagh's Run. It is known for its rusty brown fur and striking green eyes. It is stealthy and highly intelligent, unafraid to attack if it feels threatened by other animals or travelers. It is a nocturnal creature that will continue to hunt even in the worst weather conditions.",
     "mp_animal_wolf_legendary_02.desc": "The Legendary Onyx Wolf has been spotted passing by Wapiti. It is famous for its bright yellow eyes which stand out against its dark fur. Guarded and territorial, it will attack if humans get too close. This wolf is most active at night and prefers dry weather for hunting.",
-    "mp_animal_wolf_legendary_03.desc": "A wolf pack has gained notoriety just north of Cumberland Forest. It has a distinctive leader; a huge white wolf. The pack is known to attack travelers on the roads nearby, attracting the attention of Naturalists and poachers. The Legendary Moonstone Wolf has a loyal following. If tracking, be prepared to encounter the pack.",
+    "mp_animal_wolf_legendary_03.desc": "A wolf has gained notoriety just north of Cumberland Forest, around the Firwood Rise. It's a distinctive one; a huge white wolf.",
     "map.generic_not_released": "This content is not yet in the game.",
     "map.gus_price": "Gus price:",
     "map.weather.preferred_weather": "Prefered weather: {preferred_weather}",
