--- a/langs/en.json
+++ b/langs/en.json
@@ -2028,6 +2028,10 @@
     "map.weather.foggy": "Foggy weather",
     "map.weather.rain": "Rainy weather",
     "map.weather.any": "Any weather",
+    "map.meal.bgame": "Big Game Meat",
+    "map.meal.sgame": "Game Meat",
+    "map.meal.ebird": "Exotic Bird Meat",
+    "map.meal.smeat": "Stringy Meat",
     "map.legendary.spawn_time_string": "Preferred spawn time: {spawn_time_string}",
     "map.legendary.preferred_weather": "Preferred weather: {preferred_weather}",
     "map.legendary.trader_materials": "Trader materials: {trader_materials}",
