--- a/langs/en.json
+++ b/langs/en.json
@@ -2028,7 +2028,8 @@
     "map.weather.foggy": "Foggy weather",
     "map.weather.rain": "Rainy weather",
     "map.weather.any": "Any weather",
-    "map.meal.bgame": "Big Game Meat",
+    "map.meal.preferred_meal": "Preferred meal: {preferred_meal}",
+    "map.legendary.meal.bgame": "Big Game Meat",
     "map.meal.sgame": "Game Meat",
     "map.meal.ebird": "Exotic Bird Meat",
     "map.meal.smeat": "Stringy Meat",
@@ -2040,6 +2041,7 @@
     "map.legendary.trapper_pelt_value": "Trapper pelt value: {trapper_pelt_value}",
     "map.legendary.trapper_part_value": "Trapper part value: {trapper_part_value}",
     "map.legendary.sample_value": "Sample value: {sample_value}",
+    "map.legendary.preferred_meal": "Preferred meal: {preferred_meal}",
     "map.cant_be_picked_up": "This animal can't be picked up.",
     "menu.enable_legendary_backgrounds": "Legendary Animal backgrounds enabled",
     "help.enable_legendary_backgrounds": "Allows you enable or disable the animal icon backgrounds in the yellow circles on the map.",
