--- a/langs/en.json
+++ b/langs/en.json
@@ -2033,6 +2033,7 @@
     "map.meal.sgame": "Game Meat",
     "map.meal.ebird": "Exotic Bird Meat",
     "map.meal.smeat": "Stringy Meat",
+    "map.meal.undefined": "Unknown",
     "map.legendary.spawn_time_string": "Preferred spawn time: {spawn_time_string}",
     "map.legendary.preferred_weather": "Preferred weather: {preferred_weather}",
     "map.legendary.trader_materials": "Trader materials: {trader_materials}",
